--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
 
 MONGO_URL=mongodb+srv://CashTrackerAdmin:2WKxQ8ozQqdl4pgt@cluster0.fgh58oc.mongodb.net/?retryWrites=true&w=majority
-MONGO_URI=mongodb+srv://CashTrackerUser:CashTrackerUser@cluster0.fgh58oc.mongodb.net/test?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://CashTrackerUser:CashTrackerUser@cluster0.fgh58oc.mongodb.net/?retryWrites=true&w=majority
